# projected-source

./: .gitignore  .projected-source.py  README.md  pyproject.toml  test_macro_nodes.py  test_macro_with_markers.py
.ai-docs/: proto-investigations.md
examples/: applyHook.cpp  example.cpp  macro-truncated.h  macro.h
projected_source/: __init__.py  __main__.py  cli.py  custom.py
projected_source.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
projected_source/cli/: __init__.py  ai_guide.py  find_markers.py  helpers.py  render.py
projected_source/core/: __init__.py  changes_set.py  extractor.py  github.py  renderer.py
projected_source/languages/: __init__.py  cpp.py  cpp_parser.py  cpp_parser_query.py  extraction_result.py  macro_definition_finder.py  macro_finder_nodes.py  macro_finder_v3.py  proto.py  utils.py
templates/: hooks.md  hooks.md.j2  test.md  test.md.j2  test_custom_tags.md  test_custom_tags.md.j2  test_macro.md  test_macro.md.j2  test_macro_definitions.md  test_macro_definitions.md.j2  test_macro_marker.md  test_macro_marker.md.j2
test_files/: macro_example.cpp
tests/: test_changes_set.py  test_cpp_extraction.py  test_extractor.py  test_line_mapping.py  test_overload_disambiguation.py
tests/fixtures/: class_methods.h  complete.cpp  line_mapping_base.cpp  line_mapping_with_markers.cpp  overloads.cpp  ripple.proto
tests/sitter-scribbles/: explore_macros.py  extract_macro_def.py  test_macro_extraction.py
