[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "projected-source"
version = "0.1.0"
description = "Extract and project source code into documentation with tree-sitter"
authors = [{name = "Nicholas Dudfield"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tree-sitter>=0.25",
    "tree-sitter-cpp>=0.23.4",
    "jinja2>=3.1",
    "click>=8.3",
    "rich>=14.0",
    "gitpython>=3.1.45",
]

[project.scripts]
projected-source = "projected_source.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["projected_source"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true
no_implicit_optional = false

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.6",
]
